<?xml version="1.0"?>
<package format="2">
  <name>wall_follower_rl</name>
  <version>0.1.0</version>
  <description>
  Q-Learning and SARSA wall-following for Triton robot.
  
  Requires stingray_sim package for Gazebo simulation.
  
  TRAINING:
    roslaunch wall_follower_rl wall_follower.launch algorithm:=qlearning mode:=train
    roslaunch wall_follower_rl wall_follower.launch algorithm:=sarsa mode:=train
  
  TESTING (uses included best learned policy):
    roslaunch wall_follower_rl wall_follower.launch algorithm:=qlearning mode:=test
    roslaunch wall_follower_rl wall_follower.launch algorithm:=sarsa mode:=test
  
  Hyperparameters:
    Q-Learning: alpha=0.10, gamma=0.95, epsilon_start=0.90, epsilon_decay=0.997
    Episodes 1-300: epsilon_start=0.90, epsilon_decay=0.997
    Episodes 301-400: epsilon_start=0.30, epsilon_decay=0.99 (fine-tuning)
    
    SARSA: alpha=0.10, gamma=0.95, epsilon_start=0.50, epsilon_decay=0.99
    300 episodes total
  
  State: 27 states (3 sectors x 3 distance bins)
  Actions: 5 (hard-left, soft-left, straight, soft-right, hard-right)
</description>

  <maintainer email="kmeda@umass.edu">Khushei Meghana Meda</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
</package>
